# roku

./: LICENSE.txt  README.md  pyproject.toml  roku_cli.py
roku/: ecp.py
src/roku/: __about__.py  __init__.py  __main__.py
src/roku/api/: __init__.py
src/roku/cli/: __init__.py
src/roku/models/: roku.py
tests/: test_roku_api.py
